[Framework] Auto-closing manual input dialog if page reloads